# cpp-workspace

Units-Bjarne-Style/: .cproject  .project
Units-Bjarne-Style/Debug/: Units-Bjarne-Style  makefile
Units-Bjarne-Style/Debug/src/: Units-Bjarne-Style.d  subdir.mk
Units-Bjarne-Style/Release/src/: subdir.mk
Units-Bjarne-Style/src/: Units-Bjarne-Style.cpp
openmp-helloworld/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
openmp-helloworld/src/: CMakeLists.txt  main.cpp
virtual_cout_function/: .cproject  .project
virtual_cout_function/Debug/: makefile  virtual_cout_function
virtual_cout_function/Debug/src/: subdir.mk  virtual_cout_function.d
virtual_cout_function/src/: virtual_cout_function.cpp
